Company and course section design

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind components;
 @tailwind utilities;
 @plugin "daisyui" {
-    themes: dark --default, light --prefersdark;
+    themes: light --default, dark;
 }
 
 * {
