--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,13 @@
 .handwriting {
     font-family: "Caveat", cursive;
 }
+
+@layer components {
+    .section_heading {
+        @apply w-full lg:max-w-xl px-5 lg:px-0 mx-auto space-y-4;
+    }
+
+    .section_title {
+        @apply text-2xl md:text-3xl font-medium;
+    }
+}
