--- a/src/index.css
+++ b/src/index.css
@@ -16,10 +16,15 @@
 
 @layer components {
     .section_heading {
-        @apply w-full lg:max-w-xl px-5 lg:px-0 mx-auto space-y-4;
+        @apply w-full lg:max-w-xl mx-auto space-y-4;
     }
 
     .section_title {
         @apply text-2xl md:text-3xl font-medium;
+    }
+
+
+    .btn_accent {
+        @apply bg-accent text-white gap-2.5 hover:bg-yellow-600  transition-all duration-200 ease-in-out;
     }
 }
